# pnsqc_workshop_2024

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
pnsqc_workshop_2024/core/: collection_helpers.py  driver_helper.py  exceptions.py  general_helpers.py
pnsqc_workshop_2024/core/bases/: base_page.py
pnsqc_workshop_2024/core/extensions/: extended_web_driver.py  extended_web_element.py
pnsqc_workshop_2024/framework/pages/: practice_form.py
pnsqc_workshop_2024/framework/scripts/: removeAds.js
pnsqc_workshop_2024/framework/wrappers/: checkable.py  custom_select_element.py  multi_value_item.py
tests/: fixtures.py  test_io.py  test_workshop.py
tests/assets/: validation_form.py
tests/assets/wrappers/: checkable.py  custom_select_element.py  multi_value_item.py
